hard-gists/2977d9f26866b05583b0c40d88a315bf/run.log
=== Docker Run Log for 2977d9f26866b05583b0c40d88a315bf ===
Started at: Mi 29. Okt 13:23:07 CET 2025

[2025-10-29 13:23:08] START: Running container for 2977d9f26866b05583b0c40d88a315bf
[2025-10-29 13:23:08] SUCCESS: Container 511e17c0eed550861fde04a16e5988c4394e209afd5e85c06fab276ac61fb81f started for 2977d9f26866b05583b0c40d88a315bf
=== Container logs for 2977d9f26866b05583b0c40d88a315bf ===
  File "/snippet.py", line 222
    target = target.cuda(async=True)
                         ^^^^^
SyntaxError: invalid syntax
=== End of logs for 2977d9f26866b05583b0c40d88a315bf ===
[2025-10-29 13:23:10] INFO: Container 511e17c0eed550861fde04a16e5988c4394e209afd5e85c06fab276ac61fb81f has stopped
